# agentic_agent-control-browser

./: README.md  pyproject.toml
Output/: LTR_1D_trade_data.csv  marketlens_cookie.json
src/: compare_llm_model_gemini.py  compare_llm_model_openai.py
