[project]
name = "agentic-agent-control-browser"
version = "0.1.0"
description = ""
authors = [
    {name = "Wayne Cheng",email = "wayneweicheng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "browser-use (>=0.1.40,<0.2.0)",
    "langchain-google-genai (>=2.0.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
